[package]
name = "contracts"
version = "0.1.0"
edition = "2024"
description = "Risk Guard — AI-powered trading risk agent for Kraken CLI"

[[bin]]
name = "contracts"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Claude API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time — pin to avoid edition2024 transitive dep issues on Rust 1.75
chrono = { version = "=0.4.38", features = ["serde"] }

[profile.release]
lto = "thin"
opt-level = 3